--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Socials from "@components/Socials.astro";
 import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
 import { SOCIALS } from "@config";
+import "@fontsource/twinkle-star";
 
 const posts = await getCollection("blog");
 
@@ -47,7 +48,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         Read the blog posts or check
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
+          href="https://github.com/carloskim123"
         >
           README
         </LinkButton> for more info.
